--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,38 @@ body{
 #offcanvasNavbar-expand{
   background-color: rgb(255, 0, 0);
 }
+.btn-div{
+  display: flex;
+  flex-direction: column;
+/* margin: 2rem; */
+}
+.btn-div button{
+  background: none;
+  color: rgb(0, 0, 0);
+  margin: 0rem;
+  border: none;
+  text-align: left;
+margin-left: 0;
+transition-duration: 300ms;
+padding: 0;
+transform: translateY(-8px);
+}
+.btn-div button:hover{
+background: none;
+color: black;
+/* margin-left: 0rem; */
+border: none;
+}
+.material-symbols-outlined {
+  padding: 0.8rem;
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+.offcanvas, .offcanvas-lg, .offcanvas-md, .offcanvas-sm, .offcanvas-xl, .offcanvas-xxl {
+    --bs-offcanvas-width: 300px !important;
+
+}
