--- a/styles/globals.css
+++ b/styles/globals.css
@@ -138,16 +138,27 @@ padding-left: 0.4rem;
 
 /* //////////// Slider _Image ////////// */
 
-.img-sliders{
-  margin-top: -20px;
-  z-index: -2;
-}
+
 .img-slider{
-  height: 500px;
-  /* padding: 0.5rem 4rem; */
-  /* margin-top: -10px; */
+  height: 100vh;
+ 
  
 }
 .carousel-status{
 visibility: hidden;
+}
+
+
+.nav1
+{
+  position: fixed;
+  z-index: 200;
+  width: 100vw;
+  
+}
+nav{
+  background-color: rgba(0, 0, 0, 0.144) !important; 
+}
+.cor1{
+  position: absolute;
 }
