--- a/styles/globals.css
+++ b/styles/globals.css
@@ -224,12 +224,12 @@ visibility: hidden;
 }
 .overlay-main-title h1{
   
-  font-size: 5rem !important;
+  font-size: 500% !important;
   margin: 0;
 }
 .overlay-main-title span{
   
-  font-size: 0.7rem !important;
+  font-size: 70% !important;
   padding-left: 0.5rem;
   text-transform: capitalize;
   letter-spacing: 2px;
@@ -273,3 +273,79 @@ top:100px !important;
 }
 
 /*   //////////////////////// Card   //////////////////////// */
+.featured-categories{
+  padding: 3rem;
+/* height: 100vh; */
+
+background-color:ghostwhite;
+}
+.featured-categories h1{
+padding-left: 2rem;
+
+}
+.card-div{
+  margin-top: 2rem;
+  width: 100%;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+gap: 40px; 
+
+}
+.card-comp-1{
+  background: url("../public/card_1.jpg") center center no-repeat;
+}
+.card-comp-2{
+  background: url("../public/card_2.jpg") center center no-repeat;
+}
+.card-comp-3{
+  background: url("../public/card_3.jpg") center center no-repeat;
+}
+.card-comp-4{
+  background: url("../public/card_4.jpg") center center no-repeat;
+  overflow: hidden !important;
+}
+.category-cards{
+background-size: 300px;
+height: 400px;
+width: 300px;
+transition-duration: 500ms;
+
+}
+.category-cards:hover{
+  height: 400px;
+width: 300px;
+cursor: pointer;
+background-size: 350px;
+}
+.category-cards h1{
+color: #ffffff;
+position: relative;
+top: 70%;
+/* left: 0%; */
+padding: 10%;
+}
+.category-cards span{
+color: #ffffff;
+position: relative;
+top: 60%;
+/* left: 0%; */
+padding: 11%;
+}
+
+.category-cards p{
+color: #ffffff;
+position: relative;
+top: 45%;
+left: 60%;
+/* left: 0%; */
+padding: 11%;
+font-size: 1.5rem;
+}
+
+.category-card-overlay{
+z-index: 10;
+position: relative;
+background-color: #fff;
+
+}
