--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
+body {
   background-color: rgb(180, 13, 13);
   color: white;
   overflow-x: hidden;
-
 }
 
 /* 
@@ -16,199 +14,192 @@ body{
   ///////////////////////////////////////////////////////
 */
 
-.navbar{
-padding-left: 3rem !important;
-padding-right: 3rem !important;
+.navbar {
+  padding-left: 3rem !important;
+  padding-right: 3rem !important;
 }
-#offcanvasNavbar-expand{
+#offcanvasNavbar-expand {
   background-color: rgb(255, 0, 0);
 }
-.btn-div{
+.btn-div {
   display: flex;
   flex-direction: column;
-/* margin: 2rem; */
+  /* margin: 2rem; */
 }
 
-.thumbs{
-  margin:0px;
+.thumbs {
+  margin: 0px;
   padding: 0px;
 }
-.btn-div button{
+.btn-div button {
   background: none;
   color: rgb(0, 0, 0);
   margin: 0rem;
   border: none;
   text-align: left;
-margin-left: 0;
-transition-duration: 300ms;
-padding: 0;
-transform: translateY(-8px);
+  margin-left: 0;
+  transition-duration: 300ms;
+  padding: 0;
+  transform: translateY(-8px);
 }
-.btn-div button:hover{
-background: none;
-color: black;
-/* margin-left: 0rem; */
-border: none;
+.btn-div button:hover {
+  background: none;
+  color: black;
+  /* margin-left: 0rem; */
+  border: none;
 }
-.btn-div-2{
+.btn-div-2 {
   display: flex;
   flex-direction: column;
-/* margin: 2rem; */
+  /* margin: 2rem; */
 }
-.btn-div-2 button{
+.btn-div-2 button {
   background: none;
   color: rgb(0, 0, 0);
   margin: 0rem;
   border: none;
   text-align: left;
-margin-left: 0;
-transition-duration: 300ms;
-padding: 1rem;
-/* transform: translateY(-8px); */
+  margin-left: 0;
+  transition-duration: 300ms;
+  padding: 1rem;
+  /* transform: translateY(-8px); */
 }
-.btn-div-2 button:hover{
-background: none;
-color: black;
-/* margin-left: 0rem; */
-border: none;
+.btn-div-2 button:hover {
+  background: none;
+  color: black;
+  /* margin-left: 0rem; */
+  border: none;
 }
 .material-symbols-outlined {
   padding: 0.8rem;
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
 
-.offcanvas, .offcanvas-lg, .offcanvas-md, .offcanvas-sm, .offcanvas-xl, .offcanvas-xxl {
-    --bs-offcanvas-width: 350px !important;
-
+.offcanvas,
+.offcanvas-lg,
+.offcanvas-md,
+.offcanvas-sm,
+.offcanvas-xl,
+.offcanvas-xxl {
+  --bs-offcanvas-width: 350px !important;
 }
 
-.nav-btn{
-background: none !important;
-color: black !important;
-border: none !important;
+.nav-btn {
+  background: none !important;
+  color: black !important;
+  border: none !important;
 }
 
-.nav-close-btn{
-background: none !important;
-color: black !important;
-border: none !important;
-padding: 0 !important;
-margin-right: 0 !important;
+.nav-close-btn {
+  background: none !important;
+  color: black !important;
+  border: none !important;
+  padding: 0 !important;
+  margin-right: 0 !important;
 }
-.offcanvas-header{
-  min-height:10vh ;
-padding: 0 1rem !important;
-transform: translateY(10px);
+.offcanvas-header {
+  min-height: 10vh;
+  padding: 0 1rem !important;
+  transform: translateY(10px);
 }
 .offcanvas-backdrop.show {
-/* filter: blur(3px); */
-opacity: 0.6 !important;
-/* filter: blur(3px) !important; */
-;
-/* -webkit-backdrop-filter: blur(10px); */
+  /* filter: blur(3px); */
+  opacity: 0.6 !important;
+  /* filter: blur(3px) !important; */
+  /* -webkit-backdrop-filter: blur(10px); */
 }
 
-.all-nav-btns{
-margin-right: 30px;
+.all-nav-btns {
+  margin-right: 30px;
 }
-.nav-btns{
-color: whitesmoke;
-font-size: 0.9rem !important;
-margin-right: 2px;
+.nav-btns {
+  color: whitesmoke;
+  font-size: 0.9rem !important;
+  margin-right: 2px;
 }
-.nav-btns:hover{
-  padding-bottom:20px;
-border-bottom: 2px solid whitesmoke;
+.nav-btns:hover {
+  padding-bottom: 20px;
+  border-bottom: 2px solid whitesmoke;
 }
-.sign-in-btn{
-border: 1.3px solid rgba(255, 255, 255, 0.95) !important;
-color: rgba(255, 255, 255, 0.95) !important;
-border-radius: 2rem !important;
-padding: 0.4rem 1.3rem 0.6rem 1rem !important;
-margin-left: 5px;
+.sign-in-btn {
+  border: 1.3px solid rgba(255, 255, 255, 0.95) !important;
+  color: rgba(255, 255, 255, 0.95) !important;
+  border-radius: 2rem !important;
+  padding: 0.4rem 1.3rem 0.6rem 1rem !important;
+  margin-left: 5px;
 }
-.sign-in-btn:hover{
-border: 1.3px solid rgba(255, 255, 255, 0.95) !important;
-background-color: #fff !important;
-color: rgba(0, 0, 0, 0.95) !important;
-border-radius: 2rem !important;
-padding: 0.4rem 1.3rem 0.6rem 1rem !important;
+.sign-in-btn:hover {
+  border: 1.3px solid rgba(255, 255, 255, 0.95) !important;
+  background-color: #fff !important;
+  color: rgba(0, 0, 0, 0.95) !important;
+  border-radius: 2rem !important;
+  padding: 0.4rem 1.3rem 0.6rem 1rem !important;
 }
-.sign-in-btn span{
-
-padding: 0 !important;
-font-size: 1.2rem !important;
+.sign-in-btn span {
+  padding: 0 !important;
+  font-size: 1.2rem !important;
 }
-#signin{
-  
+#signin {
   font-size: 0.9rem !important;
 }
-.sign-in-btn span:nth-child(1){
+.sign-in-btn span:nth-child(1) {
+  /* padding: 0 !important; */
+  transform: translateY(4px);
+  padding-right: 5px !important;
+}
+.left-nav h1 {
+  display: inline-block;
+  transform: translateY(5px);
+  /* margin-top: 10px; */
+  letter-spacing: 1px;
+  color: white;
+}
+.offcanvas-title {
+  font-size: 2rem !important;
+  padding-left: 0.4rem;
+}
+.hamburger-menu {
+  color: white !important;
+}
 
-/* padding: 0 !important; */
-transform: translateY(4px);
-padding-right: 5px !important;
-}
-.left-nav h1{
-display: inline-block;
-transform: translateY(5px);
-/* margin-top: 10px; */
-letter-spacing: 1px;
-color: white;
-}
-.offcanvas-title{
-font-size: 2rem !important;
-padding-left: 0.4rem;
-}
-.hamburger-menu{
-color: white !important;
-}
-
-@media screen and (max-width: 680px){
-  .navbar{
+@media screen and (max-width: 680px) {
+  .navbar {
     padding-left: 0rem !important;
     padding-right: 0rem !important;
   }
 }
 
-
 /* //////////// Slider _Image ////////// */
 
-
-.img-slider{
+.img-slider {
   height: 80vh;
   z-index: 3;
   /* position: absolute; */
- 
- 
 }
-.carousel-status{
-visibility: hidden;
+.carousel-status {
+  visibility: hidden;
 }
 
-
-.nav1
-{
+.nav1 {
   position: fixed;
   z-index: 200;
   width: 100vw;
-  
 }
 
-.overlay{
+.overlay {
   /* height: 80vh; */
   height: 100%;
   width: 100%;
   position: absolute;
   /* z-index: 5; */
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.201), rgba(0, 0, 0, 0.58) 80%) fixed no-repeat;
-
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.329),
+      rgba(0, 0, 0, 0.666) 80%
+    )
+    fixed no-repeat;
 }
-.overlay-main-title{
+.overlay-main-title {
   /* height: 80vh; */
   /* width: 100%; */
   z-index: 4;
@@ -219,35 +210,32 @@ visibility: hidden;
   /* top: 100%; */
   top: 40%;
   left: 5%;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.overlay-main-title h1{
-  
+.overlay-main-title h1 {
   font-size: 500% !important;
   margin: 0;
 }
-.overlay-main-title span{
-  
+.overlay-main-title span {
   font-size: 70% !important;
   padding-left: 0.5rem;
   text-transform: capitalize;
   letter-spacing: 2px;
 }
 
-nav{
-  background-color: rgba(255, 255, 255, 0) !important; 
+nav {
+  background-color: rgba(255, 255, 255, 0) !important;
   height: 8vh !important;
   color: white !important;
   border-bottom: 1px solid rgba(255, 255, 255, 0.339);
 }
 
-.carousel .control-dots .dot{
-/* margin: 0 !important; */
-border-radius: 0 !important;
-width: 60px !important;
-height: 4px !important;
-z-index: 5 !important;
+.carousel .control-dots .dot {
+  /* margin: 0 !important; */
+  border-radius: 0 !important;
+  width: 60px !important;
+  height: 4px !important;
+  z-index: 5 !important;
 }
 /* 
 .carousel .control-arrow, .carousel.carousel-slider .control-arrow{
@@ -263,89 +251,136 @@ top:100px !important;
 } */
 /*   //////////////////////// Footer   //////////////////////// */
 
-.text-white{
+.text-white {
   text-decoration: none;
- 
 }
-.list-unstyled li{
-  padding:  10px 0px;
+.list-unstyled li {
+  padding: 10px 0px;
   text-align: left;
 }
 
 /*   //////////////////////// Card   //////////////////////// */
-.featured-categories{
+.menu-titles {
   padding: 3rem;
-/* height: 100vh; */
-
-background-color:ghostwhite;
 }
-.featured-categories h1{
-padding-left: 2rem;
-
+.menu-titles h1 {
+  padding-left: 2rem;
+  letter-spacing: 1px;
 }
-.card-div{
+.new-trending-title {
+  word-spacing: 1px;
+}
+.card-div {
   margin-top: 2rem;
   width: 100%;
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-gap: 40px; 
-
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
 }
-.card-comp-1{
+.card-comp-1 {
   background: url("../public/card_1.jpg") center center no-repeat;
 }
-.card-comp-2{
+.card-comp-2 {
   background: url("../public/card_2.jpg") center center no-repeat;
 }
-.card-comp-3{
+.card-comp-3 {
   background: url("../public/card_3.jpg") center center no-repeat;
 }
-.card-comp-4{
+.card-comp-4 {
   background: url("../public/card_4.jpg") center center no-repeat;
   overflow: hidden !important;
 }
-.category-cards{
-background-size: 300px;
-height: 400px;
-width: 300px;
-transition-duration: 500ms;
-
-}
-.category-cards:hover{
+.category-cards {
+  background-size: 300px;
   height: 400px;
-width: 300px;
-cursor: pointer;
-background-size: 350px;
+  width: 300px;
+  transition-duration: 500ms;
+  overflow: hidden;
 }
-.category-cards h1{
-color: #ffffff;
-position: relative;
-top: 70%;
-/* left: 0%; */
-padding: 10%;
+.category-cards:hover {
+  height: 400px;
+  width: 300px;
+  cursor: pointer;
+  background-size: 350px;
 }
-.category-cards span{
-color: #ffffff;
-position: relative;
-top: 60%;
-/* left: 0%; */
-padding: 11%;
+.category-cards h1 {
+  color: #ffffff;
+  position: relative;
+  top: 70%;
+  /* left: 0%; */
+  padding: 10%;
 }
-
-.category-cards p{
-color: #ffffff;
-position: relative;
-top: 45%;
-left: 60%;
-/* left: 0%; */
-padding: 11%;
-font-size: 1.5rem;
+.category-cards span {
+  color: #ffffff;
+  position: relative;
+  top: 60%;
+  /* left: 0%; */
+  padding: 11%;
 }
 
-.category-card-overlay{
-z-index: 10;
-position: relative;
-background-color: #fff;
+.category-cards p {
+  color: #ffffff;
+  position: relative;
+  top: 45%;
+  left: 60%;
+  /* left: 0%; */
+  padding: 11%;
+  font-size: 1.5rem;
+}
 
+.product-card-div {
+  margin-top: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 60px;
+}
+
+.product-cards {
+  height: 250px;
+  width: 200px;
+  background-size: 250px !important;
+  transition-duration: 500ms;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.product-name {
+  margin: 0;
+  margin-top: 7px !important;
+  font-size: 1rem;
+  /* font-weight:bold; */
+}
+.product-price {
+  margin: 0;
+  font-size: 0.85rem;
+  padding-left: 2px;
+  letter-spacing: 1px;
+  /* font-weight:bold; */
+}
+.product-details {
+  padding-left: 5px;
+}
+
+.product-card-comp-1 {
+  background: url("../public/product_1.jpg") center center no-repeat;
+  overflow: hidden !important;
+}
+.product-card-comp-2 {
+  background: url("../public/card_3.jpg") center center no-repeat;
+  overflow: hidden !important;
+}
+.product-card-comp-3 {
+  background: url("../public/product_5.jpg") center center no-repeat;
+  overflow: hidden !important;
+}
+.product-card-comp-4 {
+  background: url("../public/product_2.jpg") center center no-repeat;
+  overflow: hidden !important;
+}
+.product-card-comp-5 {
+  background: url("../public/product_3.jpg") center center no-repeat;
+  overflow: hidden !important;
 }
