--- a/styles/globals.css
+++ b/styles/globals.css
@@ -398,6 +398,10 @@ font-size: 1.5rem;
 .li_1_div{
   visibility: hidden;
 }
+/* .nav-content{
+display: flex;
+flex-direction: column;
+} */
 
 .flex-end{
   margin:10px;
@@ -425,4 +429,10 @@ nav{
   position: relative;
   width: 100vw;
   
+}
+
+.vertical_bar{
+  width: 1px;
+  background-color: rgba(0, 0, 0, 0.264);
+  height: 110%;
 }
