--- a/styles/globals.css
+++ b/styles/globals.css
@@ -365,6 +365,11 @@ top:100px !important;
   padding: 10px 0px;
   text-align: left;
 }
+.footer-color{
+ /* background  : radial-gradient(circle,rgb(95, 36, 97) 0%,  rgba(2,0,36,1) 100%) !important;  */
+ background: black !important;
+
+}
 
 /*   //////////////////////// Card   //////////////////////// */
 .menu-titles {
@@ -442,7 +447,7 @@ top:100px !important;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 60px;
+  gap: 30px;
 }
 
 .product-cards {
@@ -471,9 +476,10 @@ top:100px !important;
   padding-left: 5px;
 }
 
-.product-card-comp-1 {
-  background: url("../public/product_1.jpg") center center no-repeat;
-  overflow: hidden !important;
+.product--image{
+width: 200px;
+height: 250px;
+
 }
 .product-card-comp-2 {
   background: url("../public/card_3.jpg") center center no-repeat;
@@ -594,6 +600,10 @@ nav{
   background-color: rgba(0, 0, 0, 0.264);
   height: 110%;
 }
+
+
+/*   //////////////////////// Product Gallery  //////////////////////// */
+/* 
 .product-gallery-container{
     display:grid;
     grid-template-columns: repeat(6,1fr);
@@ -602,10 +612,6 @@ nav{
     grid-auto-flow: dense;
 }
 
-.product-gallery-container:hover .gallery-item:not(:hover){
-/* opacity: 0.9; */
-/* filter: grayscale(1); */
-}
 .gallery-item{
     width:100%;
     height:100%;
@@ -668,4 +674,4 @@ nav{
 }
 .gallery-image-h-6{
     grid-row: span 6;
-}
+} */
