--- a/styles/globals.css
+++ b/styles/globals.css
@@ -172,6 +172,8 @@ body {
   margin-top: 206px;
   height: 100vh;
   width: 65px;
+  position: fixed;
+  transition: 400ms;
 }
 /* //////////// Slider _Image ////////// */
 
@@ -332,7 +334,6 @@ nav {
   background-color: rgb(2, 1, 1) !important; 
   height: 10vh !important;
   transition: 300ms;
-
   border-bottom: 1px solid rgba(255, 255, 255, 0.339);
 }
 
@@ -668,4 +669,12 @@ nav{
 }
 .gallery-image-h-6{
     grid-row: span 6;
+}
+.fadeout{
+  opacity: 0.7;
+}
+
+.fadein{
+  opacity: 1;
+  transition-duration: 300ms;
 }
