--- a/styles/globals.css
+++ b/styles/globals.css
@@ -877,7 +877,7 @@ nav {
 .product-gallery-container:hover .gallery-item:not(:hover) {
   /* opacity: 0.9; */
   /* filter: grayscale(1); */
-}
+/* } */
 
 .gallery-item {
   width: 100%;
