filter frontend completed

--- a/pages/components/Filter/filter.module.css
+++ b/pages/components/Filter/filter.module.css
@@ -10,7 +10,7 @@
     width: 93%;
     margin-top: 10px;
     border-radius: 10px;
-    background-color: black;
+    height: 30px;
 }
 .btn_input{
     width: 93%;
