--- a/styles/globals.css
+++ b/styles/globals.css
@@ -877,7 +877,7 @@ nav {
 .product-gallery-container:hover .gallery-item:not(:hover) {
   /* opacity: 0.9; */
   /* filter: grayscale(1); */
-}
+/* } */
 
 .gallery-item {
   width: 100%;
@@ -1054,4 +1054,70 @@ nav {
   background-color: green;
   color: #fff;
 
+}
+
+img{
+  width: 300px;
+  margin: 10px;
+}
+
+
+/*////////////////////////// imageUpload Background ////////////////////////////// */
+.forms-uploadimage{
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  border: 1px solid black;
+  margin: 10px;
+  background-color: rgb(218, 243, 234);
+}
+.forms-uploadimage input{
+  margin-top: 10px;
+    width: 20%;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+
+.forms-uploadimage label{
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.forms-uploadimage button{
+  width: 120px;
+  height: 40px;
+  border: 1.5px solid black;
+  transition: 500ms;
+  border-radius: 0.5rem;
+  font-size: 20px;
+  background-color: rgb(192, 191, 191);
+}
+
+.forms-uploadimage button:hover{
+  background-color: green;
+  cursor: pointer;
+  border: #fff;
+  color: #fff;
+}
+.display-imagedetails{
+  display: flex;
+}
+
+
+.signup-btn{
+  width: 120px;
+  height: 40px;
+  border: 1.5px solid black;
+  transition: 500ms;
+  border-radius: 0.5rem;
+  font-size: 20px;
+  background-color: rgb(192, 191, 191);
+}
+
+.signup-btn:hover{
+  background-color: green;
+  cursor: pointer;
+  border: #fff;
+  color: #fff;
 }
