--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -1,10 +1,20 @@
+/* .navfix{
+position: fixed;
+z-index: 1000;
+width: 100vw;
+top: 0;
+} */
 .main_info_div{
+    /* margin-top: 5rem;
+    margin-left: 4rem; */
+    width: 95vw;
+
 /* background-color: #00purple */
 padding:2rem;
 color: aliceblue;
 width: 100vw;
 overflow: hidden;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+/* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
 
@@ -16,6 +26,7 @@ justify-content: space-between;
 .name{
 background: plum;
 background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
 
 padding: 0.6rem 5rem 0.6rem 1rem;
 /* border-radius: 5px; */
@@ -29,30 +40,25 @@ font-size: 1.3rem;
 }
 .likenshare{
 display: flex;
+background: rgba(128, 128, 128, 0.175);
+
 /* background: gray; */
 /* padding: 1rem 2rem; */
-border-radius: 5px;
+/* border-radius: 5px; */
 color: #000;
 text-align: center;
 }
 
 .like{
     padding-top: 10px;
-    background: plum;
-background: rgba(128, 128, 128, 0.375);
 
-    border-radius: 50%;
-    width: 70px;
     margin: 1rem;
+    margin: 1rem 3rem 1rem 1.5rem;
 }
 .share{
     padding-top: 10px;
-    background: plum;
-background: rgba(128, 128, 128, 0.375);
 
-border-radius: 50%;
-width: 70px;
-margin: 1rem;
+margin: 1rem 1.5rem 1rem 3rem;
 }
 
 .product_image_and_agentinfo{
@@ -69,11 +75,16 @@ overflow: hidden;
 }
 .product_images{
 object-fit: cover;
-
+transform: translateY(-6rem);
+}
+.product_images_fit{
+object-fit: cover;
+/* transform: translateY(-10rem); */
 }
 .agentinfo{
 margin-left: 40px;
 background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
 width: 25%;
 overflow: hidden;
 height: 400px;
@@ -103,6 +114,7 @@ color: #000;
 .price_contact_buynow{
 background-color: #000;
 background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
 color: #000;
 display: flex;
 justify-content: space-between;
@@ -136,6 +148,9 @@ font-size: 1.5rem;
 border-radius: 3rem;
 margin: 0 1rem 1rem 1rem;
 }
+.cart_btn{
+margin: auto;
+}
 .cart_btn button{
 display: block;
 }
@@ -154,6 +169,7 @@ justify-content: space-around;
 display: flex;
 padding: 10px 0 0 10px;
 background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
 }
 .big_image{
 /* padding: 10px; */
@@ -163,6 +179,7 @@ background: rgba(128, 128, 128, 0.375);
 }
 .ideation{
 background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
 padding: 20px;
 }
 .specifications{
@@ -171,20 +188,30 @@ width: 100%;
 }
 .inner_specifications{
 background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
 display: flex;
 justify-content: space-around;
 padding-top: 10px;
 width: 100%;
 
 }
+
+.inner_specifications_2{
+background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
+display: flex;
+justify-content: space-around;
+padding-top: 10px;
+width: 100%;
+}
 .product_images_1{
 width: 400px;
 height: 310px;
 }
 .product_images_2{
-width: 180px;
-height:106px;
-padding: 0 10px 10px 10px;
+    width: 180px;
+    height:106px;
+    padding: 0 10px 10px 10px;
 }
 .two_image{
 display: flex;
@@ -197,31 +224,35 @@ margin: 0 1rem;
 .sub_info_div{
 width: 100vw !important;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+/* width: 95vw !important; */
+/* margin-left: 4rem; */
+
 
 }
 .sub_info_div_2{
 width: 100vw !important;
 padding: 2rem;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+/* width: 95vw !important; */
+/* margin-left: 4rem; */
 
+
+}
+.specdiv{
+width: 60%;
 }
 .sssss2{
 /* background: rgba(128, 128, 128, 0.375); */
 display: flex;
 justify-content: space-between;
-padding-right: 1rem;
-}
-
-.inner_specifications_2{
-background: rgba(128, 128, 128, 0.375);
-display: flex;
-justify-content: space-around;
-padding-top: 10px;
-width: 360%;
+/* padding-right: 1rem; */
+width: 100%;
 }
 .about{
-padding: 2rem;
+    padding: 2rem;
 display: flex;
+/* width: 95vw;
+margin-left: 4rem; */
 }
 .about>div{
 width: 50%;
@@ -236,6 +267,7 @@ font-size: 1.25rem;
 .about_agent{
 margin-left: 40px;
 background: rgba(128, 128, 128, 0.375);
+background: rgba(128, 128, 128, 0.175);
 width: 25%;
 /* overflow: hidden; */
 height: 800px;
@@ -274,4 +306,8 @@ padding: 2rem;
 .money_det{
     font-weight: bold;
 text-align: left;
+}
+
+.icons{
+margin: auto;
 }
