--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -22,11 +22,13 @@ overflow: hidden;
     /* background: #fff; */
 display: flex;
 justify-content: space-between;
+background: rgba(128, 128, 128, 0.175);
+
 }
 .name{
-background: plum;
-background: rgba(128, 128, 128, 0.375);
-background: rgba(128, 128, 128, 0.175);
+/* background: plum; */
+/* background: rgba(128, 128, 128, 0.375); */
+/* background: rgba(128, 128, 128, 0.175); */
 
 padding: 0.6rem 5rem 0.6rem 1rem;
 /* border-radius: 5px; */
@@ -64,18 +66,20 @@ margin: 1rem 1.5rem 1rem 3rem;
 .product_image_and_agentinfo{
 /* background-color: #be2424; */
 display: flex;
-margin-top: 1rem;
+flex-direction: column;
 }
 .product_image{
-width: 75%;
+width: 100%;
 height: 400px;
 background-color: plum;
-
+background-image: url(../public/yachtcarousel2.jpg);
+background-repeat: no-repeat;
+background-size:100% 100%;
 overflow: hidden;
 }
 .product_images{
-object-fit: cover;
-transform: translateY(-6rem);
+object-fit: fill;
+/* transform: translateY(-6rem); */
 }
 .product_images_fit{
 object-fit: cover;
@@ -118,9 +122,9 @@ background: rgba(128, 128, 128, 0.175);
 color: #000;
 display: flex;
 justify-content: space-between;
-padding: 3rem 10rem;
+padding: 1rem 1rem;
 text-align: center;
-margin-top: 1rem;
+margin-top: 0.5rem;
 }
 
 .links{
@@ -128,7 +132,7 @@ text-decoration: none;
 color: black;
 /* text-decoration: underline; */
 display: inline-block;
-padding: 0 1rem;
+padding: 0 0.3rem;
 }
 
 .contact button{
@@ -158,10 +162,9 @@ display: block;
 
 .sssss{
 display: flex;
-padding: 10px;
-padding:2rem;
 width: 100%;
-justify-content: space-around;
+margin-left: 30px;
+/* justify-content: space-between; */
 /* background: #000; */
 
 }
@@ -222,7 +225,7 @@ height: 150px;
 margin: 0 1rem;
 }
 .sub_info_div{
-width: 100vw !important;
+width: 100% !important;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 /* width: 95vw !important; */
 /* margin-left: 4rem; */
@@ -311,3 +314,74 @@ text-align: left;
 .icons{
 margin: auto;
 }
+
+.top0{
+width: 96%;
+height: 400px;
+background-image: url(../public/yachtcarousel1.jpg);
+background-repeat: no-repeat;
+background-size:100% 100%;
+overflow: hidden;
+}
+
+.gallery0{
+    width: 100%;
+    height: 200px;
+    margin-top: 10px;
+    margin-right: 10px;
+    background-image: url(../public/yachtcarousel1.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    overflow: hidden;
+}
+
+.gallery1{
+    width: 100%;
+    height: 330px;
+    margin-top: 10px;
+    margin-left: 10px;
+    background-image: url(../public/yachtcarousel1.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    overflow: hidden;
+    }
+.gallery2{
+    width: 50%;
+    height: 670px;
+    margin-top: 10px;
+    background-image: url(../public/yachtcarousel1.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    overflow: hidden;
+    }
+.gallery3{
+    width:90%;
+    height: 200px;
+    margin-right:10px;
+    margin-left:10px;
+    margin-top: -70px;
+    background-image: url(../public/yachtcarousel1.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    overflow: hidden;
+    }
+.gallery4{
+        width:90%;
+        height: 200px;
+        margin:10px;
+        background-image: url(../public/yachtcarousel1.jpg);
+        background-repeat: no-repeat;
+        background-size:100% 100%;
+        overflow: hidden;
+    }
+
+.company0{
+        width:300px;
+        height: 150px;
+        margin-left: 40px;
+        background-image: url(../public/yachtcarousel1.jpg);
+        background-repeat: no-repeat;
+        background-size:100% 100%;
+        overflow: hidden;
+}
+        
