--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1221,3 +1221,127 @@ img{
   border: #fff;
   color: #fff;
 }
+
+
+/* ////////////////////////  New SignUp Page ///////////////////////////////// */
+
+.mainSignUpcont{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  /* background-color: #f3d9d7; */
+background-image: url(../images/yacht2.png);
+background-size: cover;
+background-position: center;
+}
+
+
+.secondsignupcont{
+  
+  width: 550px;
+  padding: 40px;
+  margin-right: 30px;
+  background-color: #ffffffcc;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
+}
+
+
+
+.signUpEnterEmail{
+  width: 100%;
+  padding: 20px;
+  border: none;
+  margin-bottom: 20px;
+
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  font-size: 20px;
+  color: #100e0e;
+}
+
+.signUpEnterEmail:focus{
+  outline: none;
+  box-shadow: 0 0 0 2px #0070f3;
+}
+.signUpEnterEmail1{
+  width: 100%;
+  padding: 20px;
+  border: none;
+ 
+
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  font-size: 20px;
+  color: #100e0e;
+}
+
+.signUpEnterEmail1:focus{
+  outline: none;
+  box-shadow: 0 0 0 2px #f30400;
+}
+
+.signUpEnterPass{
+  width: 100%;
+  padding: 20px;
+  border: none;
+  margin: 10px 0 ;
+
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  font-size: 20px;
+  color: #100e0e;
+}
+.signUpEnterPass:focus{
+  outline: none;
+  box-shadow: 0 0 0 2px blue;
+}
+.signUpInputCont{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.signupicon{
+  font-size: 25px;
+  color: blue;
+  margin-left: -40px;
+}
+.signupsubmitbtn{
+  width: 100%;
+  padding: 16px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #0070f3;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.signupsubmitbtn:hover{
+  background-color: #005ae6;
+
+}
+.signupsubmitbtngoogle{
+  width: 100%;
+  padding: 16px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  background-color: rgb(236, 20, 20);
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.signupsubmitbtngoogle:hover{
+  background-color:rgb(192, 18, 18);
+
+}
+.signupTerms{
+  font-size: 20px;
+
+}
