--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1259,11 +1259,12 @@ nav {
 
 .mainSignUpcont{
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 5%;
   align-items: center;
   height: 100vh;
   /* background-color: #f3d9d7; */
-background-image: url(../images/yacht2.png);
+background-color:rgb(93,23,235);
 background-size: cover;
 background-position: center;
 }
@@ -1274,7 +1275,7 @@ background-position: center;
   width: 550px;
   padding: 40px;
   margin-right: 30px;
-  background-color: #ffffffcc;
+  background-color: #ffffff;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
 }
