--- a/styles/SellerLogin.module.css
+++ b/styles/SellerLogin.module.css
@@ -8,8 +8,7 @@
 
 .login_btn{
     font-size: 24px;
-    /* width: 15%; */
-    ;
+    
     margin-right: 2rem ;
     padding: 0 5px;
     color: white;
@@ -17,18 +16,18 @@
     border-radius: 2rem;
 }
 .main_div{
-    /* background-color: black; */
+   
     background-color:  rgb(93, 23, 235);
     /* margin-top: -2%; */
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .center_div{
-    margin-top: -6%;
-    height:85%;
+    /* margin-top: -6%; */
+    /* height:85%; */
     width: 60%;
     background-color: white;
     border-radius: 2rem;
