--- a/styles/SellerLogin.module.css
+++ b/styles/SellerLogin.module.css
@@ -20,15 +20,15 @@
     /* background-color: black; */
     background-color:  rgb(93, 23, 235);
     /* margin-top: -2%; */
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .center_div{
-    margin-top: -6%;
-    height:85%;
+    margin:40px;
+    height:85%; 
     width: 60%;
     background-color: white;
     border-radius: 2rem;
