--- a/styles/SellerLogin.module.css
+++ b/styles/SellerLogin.module.css
@@ -4,6 +4,8 @@
    display: flex;
    justify-content: flex-end;
     background-color:  rgb(93, 23, 235);
+    position: sticky;
+    top: 0;
 }
 
 .login_btn{
@@ -29,6 +31,7 @@
 .center_div{
     /* margin-top: -6%; */
     /* height:85%; */
+    z-index: 1;
     width: 60%;
     background-color: white;
     border-radius: 2rem;
@@ -153,7 +156,7 @@
 }
 .sub_btn{
     font-size: 24px;
-    background-color: rgb(93, 23, 235);
+    background-color: rgb(249,115,22);
     width: 30%;
     padding: 5px 0;
     color: white;
