--- a/styles/SellerLogin.module.css
+++ b/styles/SellerLogin.module.css
@@ -20,10 +20,8 @@
 .main_div{
    
     background-color:  rgb(93, 23, 235);
-    /* margin-top: -2%; */
-    /* height: 100vh; */
-    /* height: 100vh; */
-    width: 100%;
+    padding-bottom: 2%;
+    /* width: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +30,7 @@
     /* margin-top: -6%; */
     /* height:85%; */
     z-index: 1;
-    width: 60%;
+    /* width: 60%; */
     background-color: white;
     border-radius: 2rem;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(93, 23, 235),
@@ -76,6 +74,7 @@
     display: flex;
     flex-direction: column;
     margin: 10px 0;
+    position: relative;
 }
 .form_left_div div label{
     font-size: larger;
@@ -89,8 +88,10 @@
    padding: 10px 10px;
    border-radius: 2rem;
    color: black;
+   position: relative;
    border: 2px solid  rgb(93, 23, 235);
 }
+
 .form_left_div div select{
     margin-top: 1%;
     width: 80%;
@@ -109,7 +110,28 @@
     /* margin-left: -40px; */
     transform: translate(6rem, -2rem);
   }
+.verify_btn{
+    position: relative;
+    left: 65%;
+   z-index: 100;
+   margin-top: -11%;
+   /* border: 1px solid green; */
+   width: 40px;
+   margin-bottom: 5%;
 
+    /* color: red; */
+}
+.verifyemail_btn{
+    position: relative;
+    left: 65%;
+   z-index: 100;
+   margin-top: -8.5%;
+   /* border: 1px solid green; */
+   width: 40px;
+   margin-bottom: 5%;
+
+    /* color: red; */
+}
 
 .right_div_content{
     display: flex;
@@ -126,7 +148,7 @@
    padding: 10px 10px;
    border-radius: 2rem;
    color: black;
-   border: 2px solid  rgb(93, 23, 235);
+   border: 2px solid  rgb(249,115,22);
 }
 
 .right_form_div{
@@ -147,10 +169,26 @@
 }
 
 .rad_btn input{
-  width: 20px;
-  height: 24px;
+  width: 15px;
+  height: 15px;
+  accent-color: purple;
+  appearance: none;
+  border-radius: 50%;
+  border: 0.8px solid rgb(190, 189, 189);
   background-color: grey;
-  border-color: grey;
+  box-shadow: 0px 0px 0px 8px white, 0 0 0 9px grey;
+  margin-right: 10px;
+}
+.rad_btn input:checked  {
+    /* background-color: purple; */
+
+    appearance: auto;
+    box-shadow:  0 0 0 0;
+    width: 30px;
+    height: 30px;
+    color: purple;
+    margin-left: -10px;
+    /* margin-top: 5px; */
 }
 .rad_btn label{
  font-size: 24px;
@@ -172,11 +210,22 @@
 
 }
 
-.pass_btn{
-    display: flex !important;
-    flex-direction: row;
-    background-color: aqua;
+
+
+
+
+.footer_assistance{
+    position: sticky;
+    bottom: 5%;
 }
 
-
-
+.phone_inp input:focus{
+  box-shadow: none !important;
+}
+.phone_inp::-webkit-scrollbar{
+    display: none !important; 
+}
+.country-list::-webkit-scrollbar {
+    height: 0px;
+    width: 0px;
+  }
