--- a/styles/SellerLogin.module.css
+++ b/styles/SellerLogin.module.css
@@ -10,27 +10,29 @@
 
 .login_btn{
     font-size: 24px;
-    
-    margin-right: 2rem ;
     padding: 0 5px;
-    color: white;
+    color: black;
     cursor: pointer;
-    border-radius: 2rem;
+    margin-left: 20%;
+    margin-top: -100px;
 }
 .main_div{
    
-    background-color:  rgb(93, 23, 235);
-    padding-bottom: 2%;
     /* width: 100%; */
+    /* margin:100px; */
     display: flex;
     align-items: center;
-    justify-content: center;
+    margin: auto;
 }
 .center_div{
     /* margin-top: -6%; */
     /* height:85%; */
     z-index: 1;
-    /* width: 60%; */
+    min-width: 65vw;
+    height: 47vw;
+    margin: 100px;
+    margin-left: 270px;
+    /* margin-right: 140px; */
     background-color: white;
     border-radius: 2rem;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(93, 23, 235),
@@ -47,7 +49,6 @@
     font-size: larger;
 }
 .content_div{
-    height: auto;
     display: flex;
     flex-direction: row;
     flex: 10%;
@@ -229,3 +230,7 @@
     height: 0px;
     width: 0px;
   }
+
+.logincoverbox{
+    width: 100vw;
+}
