Module Styles Added

--- a/styles/responsive.module.css
+++ b/styles/responsive.module.css
@@ -1,14 +1,32 @@
-@media only screen and (max-width: 1190px){
+/* Hide scrollbar for a particular component */
+
+/* For WebKit browsers */
+.no-scrollbar::-webkit-scrollbar {
+    display: none !important;
+  }
+  
+  /* For Firefox */
+  .no-scrollbar {
+    scrollbar-width: none !important; /* hides scrollbar */
+  }
+  
+  /* For IE and Edge */
+  .no-scrollbar {
+    -ms-overflow-style: none !important; /* disables default scrollbar */
+  }
+  
+@media only screen and (max-width: 680px){
     .small{
-        visibility: hidden;
+        /* visibility: hidden; */
+        display: none;
     }
 }
-@media only screen and (min-width: 1200px){
+/* @media only screen and (min-width: 1200px){
     .small{
         visibility: visible;
     }
 }
-
+ */
 
 @media only screen and (max-width: 990px){
     .smallnav{
