--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,8 @@
 
   z-index: 4;
   position: absolute; 
+  color: rgba(127, 255, 212, 0.725);
+  /* color: wheat; */
   color: #fff;
   width: 70%;
   height: 40%;
@@ -22,13 +24,16 @@
   align-items: center;
   flex-direction: column;
   left: 15%;
-  top: 23%;
-
+  top: 30%;
 }
 .overlay_main_title > h1 {
-  font-size: 8rem;
+  font-size: 13rem;
+  transform: translate(-10px,30px);
+  letter-spacing: 9px;
   color: rgba(0, 0, 0, 0.524);
   color: rgba(255, 255, 255, 0.726);
+  /* color: rgba(127, 255, 212, 0.725); */
+
 }
 .carousel_search {
   width: 70%;
@@ -75,10 +80,10 @@
 }
 
 .line_span {
-  font-size: 70% !important;
+  font-size: 100% !important;
   padding-top: 1rem;
   text-transform: capitalize;
-  letter-spacing: 2px;
+  letter-spacing: 5px;
   word-spacing: 3px;
   text-align: center;
 }
@@ -100,7 +105,7 @@
 .carousel_icon_div {
   display: flex;
   gap: 26px;
-  padding-top: 2%;
+  padding-top: 5%;
   justify-content: center;
   align-items: center;
 }
@@ -108,12 +113,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
+  width: 130px;
+  height: 130px;
   background: rgba(255, 255, 255, 0.282);
   border-radius: 50%;
   opacity: 0.7;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(15px);
   text-decoration: none;
   margin: 0;
 
@@ -130,18 +135,18 @@
   opacity: 0.5;
 }
 .carousel_icons span {
-  font-size: 2rem;
+  font-size: 3.2rem;
   color: #fff;
 }
 .selected {
-  width: 115px;
-  height: 115px;
+  width: 145px;
+  height: 145px;
   opacity: 1;
 
 }
 .selected:hover {
-  width: 115px;
-  height: 115px;
+  width: 145px;
+  height: 145px;
 }
 .selected span {
   font-size: 3rem;
@@ -292,10 +297,12 @@ padding: 0.65rem;
   font-size: 2.3rem;
 }
 }
-@media only screen and (max-width: 780px){
+@media only screen and (max-width: 800px){
 .overlay_main_title>h1{
-font-size: 6.3rem;
+font-size: 7rem;
 margin: 0;
+margin-bottom: 1rem;
+margin-right: -5%;
 }
 .carousel_search input {
   width: 80%;
@@ -313,7 +320,7 @@ font-size: 100%;
 padding: 0.65rem;
 }
 .line_span {
-  width: 150%;
+  width: 120%;
   font-size: 45% !important;
   padding-top: 1rem;
   letter-spacing: 2px;
@@ -322,6 +329,7 @@ padding: 0.65rem;
 .carousel_icon_div {
   gap: 20px;
   padding: 0 4%;
+  padding: 0;
   padding-top: 3%;
   flex-wrap: wrap;
 
@@ -346,64 +354,266 @@ padding: 0.65rem;
   font-size: 2.3rem;
 }
 }
+@media only screen and (max-width: 720px){
+  .carousel_search input {
+    padding: 0.7%;
+    font-size: 90%;
+  }
+  .carousel_search button span{
+  font-size: 80%;
+  padding: 0.45rem;
+  }
+  .line_span {
+    /* width: 150%; */
+    font-size: 55% !important;
+    padding-top: 1rem;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+  }
+  .carousel_icon_div {
+    gap: 20px;
+    width: 130%;
+    padding: 0 4%;
+    padding: 0;
+    padding-top: 3%;
+    flex-wrap: wrap;
+    /* overflow: hidden; */
+  
+  }
+  .carousel_icons {
+    width: 80px;
+    height: 80px;
+  }
+  .carousel_icons span {
+    font-size: 1.6rem;
+  }
+  .selected {
+    width: 92px;
+    height: 92px;
+  
+  }
+  .selected:hover {
+    width: 92px;
+    height: 92px;
+  }
+  .selected span {
+    font-size: 2.3rem;
+  }
+}
+@media only screen and (max-width: 600px){
+
+  .carousel_icons {
+    width: 70px;
+    height: 70px;
+  }
+   .carousel_search input {
+    padding: 0.7%;
+    font-size: 90%;
+  }
+  .carousel_icons span {
+    font-size: 1.6rem;
+  }
+  .selected {
+    width: 82px;
+    height: 82px;
+  
+  }
+  .selected:hover {
+    width: 82px;
+    height: 82px;
+  }
+  .selected span {
+    font-size: 2.3rem;
+  }
+}
+
 @media only screen and (max-width: 500px){
-.overlay_main_title>h1{
-font-size:5.5rem;
-margin: 0;
+
+  .overlay_main_title>h1{
+  /* transform: translate(0,-20%); */
+font-size:8rem;
 }
 .carousel_search {
-  width: 80%;
+  width: 110%;
+  /* transform: translate(0,-120%); */
 }
 .carousel_search input {
-  width: 80%;
-  padding: 0.8%;
-  text-align: center;
-  font-size: 90%;
-  border-radius: 2rem;
-  outline: none;
-  border: none;
-  letter-spacing: 1px;
-  transition-duration: 300ms;
+  padding: 0.9%;
+  font-size: 110%;
 }
 .carousel_search button span{
-font-size: 80%;
-padding: 0.65rem;
-}
-.line_span {
-  width: 100%;
-  font-size: 45% !important;
-  padding-top: 1rem;
-  letter-spacing: 2px;
-  word-spacing: 3px;
-}
+  font-size: 90%;
+  padding: 0.45rem;
+  }
+  .line_span {
+    /* width: 150%; */
+    font-size: 55% !important;
+    padding-top: 1rem;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+  /* transform: translate(0,-120%); */
+
+  }
 .carousel_icon_div {
-  gap: 20px;
-  padding: 0 4%;
-  padding-top: 7%;
+  gap: 10px;
+  padding: 0 2%;
+  padding-top: 9%;
   flex-wrap: wrap;
+  /* transform: translate(0,60%); */
 
 }
 .carousel_icons {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
 }
 .carousel_icons span {
   font-size: 1.2rem;
 }
 .selected {
-  width: 82px;
-  height: 82px;
+  width: 74px;
+  height: 74px;
 
 }
 .selected:hover {
-  width: 82px;
-  height: 82px;
+  width: 74px;
+  height: 74px;
 }
 .selected span {
-  font-size: 2rem;
+  font-size: 1.4rem;
 }
 }
-@media only screen and (max-width: 450px){
+ @media only screen and (max-width: 430px) {
+ .overlay_main_title>h1{
+  margin-right: -8%;
+ }
+
+  .line_span {
+    /* width: 150%; */
+    font-size: 45% !important;
+    padding-top: 1rem;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+  /* transform: translate(0,-120%); */
+
+  }
+  .carousel_icons {
+    width: 52px;
+    height: 52px;
+  }
+  .carousel_icons span {
+    font-size: 1.2rem;
+  }
+  .selected {
+    width: 65px;
+    height: 65px;
+  
+  }
+  .selected:hover {
+    width: 65px;
+    height: 65px;
+  }
+  .selected span {
+    font-size: 1.1rem;
+  }
+ }
+ @media only screen and (max-width: 362px){
+
+  .overlay_main_title>h1{
+    /* transform: translate(0,-20%); */
+  font-size:6.5rem;
+  }
+  .carousel_search {
+    width: 100%;
+    /* transform: translate(0,-120%); */
+  }
+  .carousel_search input {
+    padding: 0.8%;
+    font-size: 90%;
+  }
+  .carousel_search button span{
+    font-size: 80%;
+    padding: 0.45rem;
+    }
+
+  .line_span {
+    /* width: 150%; */
+    font-size: 35% !important;
+    padding-top: 1rem;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+  /* transform: translate(0,-120%); */
+
+  }
+  .carousel_icons {
+    width: 45px;
+    height: 45px;
+  }
+  .carousel_icons span {
+    font-size: 1.2rem;
+  }
+  .selected {
+    width: 55px;
+    height: 55px;
+  
+  }
+  .selected:hover {
+    width: 55px;
+    height: 55px;
+  }
+  .selected span {
+    font-size: 1.1rem;
+  }
+ }
+ @media only screen and (max-width: 315px){
+
+  .overlay_main_title>h1{
+    /* transform: translate(0,-20%); */
+  font-size:5.5rem;
+  }
+  .carousel_search {
+    width: 80%;
+    /* transform: translate(0,-120%); */
+  }
+  .carousel_search input {
+    padding: 0.8%;
+    font-size: 60%;
+  }
+  .carousel_search button span{
+    font-size:70%;
+    padding: 0.25rem;
+    border-radius: 100%;
+    }
+
+  .line_span {
+    /* width: 150%; */
+    font-size: 30% !important;
+    padding-top: 1rem;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+  /* transform: translate(0,-120%); */
+
+  }
+  .carousel_icons {
+    width: 40px;
+    height: 40px;
+  }
+  .carousel_icons span {
+    font-size: 1rem;
+  }
+  .selected {
+    width: 50px;
+    height: 50px;
+  
+  }
+  .selected:hover {
+    width: 50px;
+    height: 50px;
+  }
+  .selected span {
+    font-size: 1.1rem;
+  }
+ }
+/* @media only screen and (max-width: 450px){
 .overlay_main_title>h1{
 font-size:5.5rem;
 margin: 0;
@@ -632,4 +842,4 @@ padding: 0.55rem;
 .selected span {
   font-size: 1.9rem;
 }
-}
+} */
